sorted path clipping bug

--- a/test-scripts/base.css
+++ b/test-scripts/base.css
@@ -12,12 +12,14 @@ article,aside,figure,footer,header,hgroup,nav,section { display:block; }
 html, body{
 	margin: 0;
 	padding: 0;
-	background: #fff;
+	background: #e6e6e6;
 	font-family: "proxima-nova", Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-size: 12px;
 	width: 100%;
 	height: 100%;
+	border:10px solid #ff624a;
+	overflow: hidden;
 }
 
 input, textarea {
